src/objects/wi__Synchronizable_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>wi__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wi__Field__c</fullName>
        <label>Field</label>
        <metadataRelationshipControllingField>wi__Synchronizable_Fields__mdt.wi__Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>WebInfinity_Synchronizable_Fields</relationshipLabel>
        <relationshipName>WebInfinity_Synchronizable_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>wi__Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>WebInfinity_Synchronizable_Fields</relationshipLabel>
        <relationshipName>WebInfinity_Synchronizable_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Synchronizable Fields</label>
    <pluralLabel>Synchronizable Fields</pluralLabel>
</CustomObject>